cmake_minimum_required(VERSION 3.12)
project(cthulhurl)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/gui)
include_directories(libtcod-1.5.1/include)
include_directories(libtcod-1.5.1/include/gui)
include_directories(libtcod-1.5.1/samples/hmtool)
include_directories(libtcod-1.5.1/samples/navier)
include_directories(libtcod-1.5.1/samples/rad)
include_directories(libtcod-1.5.1/samples/ripples)
include_directories(libtcod-1.5.1/samples/weather)
include_directories(libtcod-1.5.1/samples/worldgen)
include_directories(libtcod-1.5.1/src/png)

add_executable(cthulhurl
        include/gui/button.hpp
        include/gui/container.hpp
        include/gui/flatlist.hpp
        include/gui/gui.hpp
        include/gui/hbox.hpp
        include/gui/image.hpp
        include/gui/label.hpp
        include/gui/radiobutton.hpp
        include/gui/slider.hpp
        include/gui/statusbar.hpp
        include/gui/textbox.hpp
        include/gui/togglebutton.hpp
        include/gui/toolbar.hpp
        include/gui/vbox.hpp
        include/gui/widget.hpp
        include/bresenham.h
        include/bresenham.hpp
        include/bsp.h
        include/bsp.hpp
        include/color.h
        include/color.hpp
        include/console.h
        include/console.hpp
        include/console_types.h
        include/fov.h
        include/fov.hpp
        include/fov_types.h
        include/heightmap.h
        include/heightmap.hpp
        include/image.h
        include/image.hpp
        include/lex.h
        include/lex.hpp
        include/libtcod.h
        include/libtcod.hpp
        include/libtcod_int.h
        include/list.h
        include/list.hpp
        include/mersenne.h
        include/mersenne.hpp
        include/mersenne_types.h
        include/mouse.h
        include/mouse.hpp
        include/mouse_types.h
        include/namegen.h
        include/namegen.hpp
        include/noise.h
        include/noise.hpp
        include/noise_defaults.h
        include/parser.h
        include/parser.hpp
        include/path.h
        include/path.hpp
        include/sys.h
        include/sys.hpp
        include/tree.h
        include/tree.hpp
        include/txtfield.h
        include/txtfield.hpp
        include/wrappers.h
        include/zip.h
        include/zip.hpp
        libtcod-1.5.1/include/gui/button.hpp
        libtcod-1.5.1/include/gui/container.hpp
        libtcod-1.5.1/include/gui/flatlist.hpp
        libtcod-1.5.1/include/gui/gui.hpp
        libtcod-1.5.1/include/gui/hbox.hpp
        libtcod-1.5.1/include/gui/image.hpp
        libtcod-1.5.1/include/gui/label.hpp
        libtcod-1.5.1/include/gui/radiobutton.hpp
        libtcod-1.5.1/include/gui/slider.hpp
        libtcod-1.5.1/include/gui/statusbar.hpp
        libtcod-1.5.1/include/gui/textbox.hpp
        libtcod-1.5.1/include/gui/togglebutton.hpp
        libtcod-1.5.1/include/gui/toolbar.hpp
        libtcod-1.5.1/include/gui/vbox.hpp
        libtcod-1.5.1/include/gui/widget.hpp
        libtcod-1.5.1/include/bresenham.h
        libtcod-1.5.1/include/bresenham.hpp
        libtcod-1.5.1/include/bsp.h
        libtcod-1.5.1/include/bsp.hpp
        libtcod-1.5.1/include/color.h
        libtcod-1.5.1/include/color.hpp
        libtcod-1.5.1/include/console.h
        libtcod-1.5.1/include/console.hpp
        libtcod-1.5.1/include/console_types.h
        libtcod-1.5.1/include/fov.h
        libtcod-1.5.1/include/fov.hpp
        libtcod-1.5.1/include/fov_types.h
        libtcod-1.5.1/include/heightmap.h
        libtcod-1.5.1/include/heightmap.hpp
        libtcod-1.5.1/include/image.h
        libtcod-1.5.1/include/image.hpp
        libtcod-1.5.1/include/lex.h
        libtcod-1.5.1/include/lex.hpp
        libtcod-1.5.1/include/libtcod.h
        libtcod-1.5.1/include/libtcod.hpp
        libtcod-1.5.1/include/libtcod_int.h
        libtcod-1.5.1/include/list.h
        libtcod-1.5.1/include/list.hpp
        libtcod-1.5.1/include/mersenne.h
        libtcod-1.5.1/include/mersenne.hpp
        libtcod-1.5.1/include/mersenne_types.h
        libtcod-1.5.1/include/mouse.h
        libtcod-1.5.1/include/mouse.hpp
        libtcod-1.5.1/include/mouse_types.h
        libtcod-1.5.1/include/namegen.h
        libtcod-1.5.1/include/namegen.hpp
        libtcod-1.5.1/include/noise.h
        libtcod-1.5.1/include/noise.hpp
        libtcod-1.5.1/include/noise_defaults.h
        libtcod-1.5.1/include/parser.h
        libtcod-1.5.1/include/parser.hpp
        libtcod-1.5.1/include/path.h
        libtcod-1.5.1/include/path.hpp
        libtcod-1.5.1/include/sys.h
        libtcod-1.5.1/include/sys.hpp
        libtcod-1.5.1/include/tree.h
        libtcod-1.5.1/include/tree.hpp
        libtcod-1.5.1/include/txtfield.h
        libtcod-1.5.1/include/txtfield.hpp
        libtcod-1.5.1/include/wrappers.h
        libtcod-1.5.1/include/zip.h
        libtcod-1.5.1/include/zip.hpp
        libtcod-1.5.1/samples/doctcod/doctcod.cpp
        libtcod-1.5.1/samples/frost/frost.cpp
        libtcod-1.5.1/samples/hmtool/hmtool.cpp
        libtcod-1.5.1/samples/hmtool/operation.cpp
        libtcod-1.5.1/samples/hmtool/operation.hpp
        libtcod-1.5.1/samples/navier/main.cpp
        libtcod-1.5.1/samples/navier/main.hpp
        libtcod-1.5.1/samples/rad/bsp_helper.cpp
        libtcod-1.5.1/samples/rad/bsp_helper.hpp
        libtcod-1.5.1/samples/rad/main.cpp
        libtcod-1.5.1/samples/rad/rad_shader.cpp
        libtcod-1.5.1/samples/rad/rad_shader.hpp
        libtcod-1.5.1/samples/rad/rad_shader_photon.cpp
        libtcod-1.5.1/samples/rad/rad_shader_standard.cpp
        libtcod-1.5.1/samples/ripples/main.cpp
        libtcod-1.5.1/samples/ripples/main.hpp
        libtcod-1.5.1/samples/ripples/util_ripples.cpp
        libtcod-1.5.1/samples/ripples/util_ripples.hpp
        libtcod-1.5.1/samples/weather/main.cpp
        libtcod-1.5.1/samples/weather/main.hpp
        libtcod-1.5.1/samples/weather/util_weather.cpp
        libtcod-1.5.1/samples/weather/util_weather.hpp
        libtcod-1.5.1/samples/worldgen/main.cpp
        libtcod-1.5.1/samples/worldgen/main.hpp
        libtcod-1.5.1/samples/worldgen/util_worldgen.cpp
        libtcod-1.5.1/samples/worldgen/util_worldgen.hpp
        libtcod-1.5.1/samples/apfviewer.cpp
        libtcod-1.5.1/samples/samples_c.c
        libtcod-1.5.1/samples/samples_cpp.cpp
        libtcod-1.5.1/src/gui/button.cpp
        libtcod-1.5.1/src/gui/container.cpp
        libtcod-1.5.1/src/gui/flatlist.cpp
        libtcod-1.5.1/src/gui/hbox.cpp
        libtcod-1.5.1/src/gui/image.cpp
        libtcod-1.5.1/src/gui/label.cpp
        libtcod-1.5.1/src/gui/radiobutton.cpp
        libtcod-1.5.1/src/gui/slider.cpp
        libtcod-1.5.1/src/gui/statusbar.cpp
        libtcod-1.5.1/src/gui/textbox.cpp
        libtcod-1.5.1/src/gui/togglebutton.cpp
        libtcod-1.5.1/src/gui/toolbar.cpp
        libtcod-1.5.1/src/gui/vbox.cpp
        libtcod-1.5.1/src/gui/widget.cpp
        libtcod-1.5.1/src/png/lodepng.c
        libtcod-1.5.1/src/png/lodepng.h
        libtcod-1.5.1/src/bresenham.cpp
        libtcod-1.5.1/src/bresenham_c.c
        libtcod-1.5.1/src/bsp.cpp
        libtcod-1.5.1/src/bsp_c.c
        libtcod-1.5.1/src/color.cpp
        libtcod-1.5.1/src/color_c.c
        libtcod-1.5.1/src/console.cpp
        libtcod-1.5.1/src/console_c.c
        libtcod-1.5.1/src/fov.cpp
        libtcod-1.5.1/src/fov_c.c
        libtcod-1.5.1/src/fov_circular_raycasting.c
        libtcod-1.5.1/src/fov_diamond_raycasting.c
        libtcod-1.5.1/src/fov_digital.c
        libtcod-1.5.1/src/fov_permissive.c
        libtcod-1.5.1/src/fov_permissive2.c
        libtcod-1.5.1/src/fov_recursive_shadowcasting.c
        libtcod-1.5.1/src/fov_restrictive.c
        libtcod-1.5.1/src/heightmap.cpp
        libtcod-1.5.1/src/heightmap_c.c
        libtcod-1.5.1/src/image.cpp
        libtcod-1.5.1/src/image_c.c
        libtcod-1.5.1/src/lex.cpp
        libtcod-1.5.1/src/lex_c.c
        libtcod-1.5.1/src/list_c.c
        libtcod-1.5.1/src/mersenne.cpp
        libtcod-1.5.1/src/mersenne_c.c
        libtcod-1.5.1/src/mouse.cpp
        libtcod-1.5.1/src/namegen.cpp
        libtcod-1.5.1/src/namegen_c.c
        libtcod-1.5.1/src/noise.cpp
        libtcod-1.5.1/src/noise_c.c
        libtcod-1.5.1/src/parser.cpp
        libtcod-1.5.1/src/parser_c.c
        libtcod-1.5.1/src/path.cpp
        libtcod-1.5.1/src/path_c.c
        libtcod-1.5.1/src/sys.cpp
        libtcod-1.5.1/src/sys_c.c
        libtcod-1.5.1/src/sys_opengl_c.c
        libtcod-1.5.1/src/sys_sdl_c.c
        libtcod-1.5.1/src/sys_sdl_img_bmp.c
        libtcod-1.5.1/src/sys_sdl_img_png.c
        libtcod-1.5.1/src/sys_sfml_c.c
        libtcod-1.5.1/src/tree_c.c
        libtcod-1.5.1/src/txtfield.cpp
        libtcod-1.5.1/src/txtfield_c.c
        libtcod-1.5.1/src/wrappers.c
        libtcod-1.5.1/src/zip.cpp
        libtcod-1.5.1/src/zip_c.c
        main.c
        test.c)
